fix: Mobile layout issues on Detectives and Events pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,15 +36,6 @@
     outline: 2px solid var(--color-evidence-red);
     outline-offset: 2px;
   }
-
-  .full-width-breakout {
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-  }
 }
 
 * {
